@@ -1,12 +1,13 @@
 Version 3.3.0   unreleased
 
-	* Update class comments on StubbedClientTest case to reflect current usage.
+    * Update class comments on StubbedClientTest case to reflect current usage.
     * Renamed AbstractClickHandler to AbstractViewEventClickHandler for consistency.
     * Renamed the the new Simple handlers to Abstract and move to the correct .gwt.handler package.
     * Add a new AbstractClickHandler that's not a ViewEventHandler.
     * Add tests for code in .client.gwt.handler so that tests in client projects can be simpler.
     * Add new format methods to ViewDataUtils, for consistent formatting in display labels.
     * Fix BackendDataSource so that it clears any selections when refreshing a table.
+    * Tweak DataTablePager to show a more sensible count ("> 10 of 10") if the final page is empty.
 
 Version 3.2.0   20 Nov 2013
 
